[gd_scene load_steps=12 format=3 uid="uid://cl0l1ahpak3yn"]

[ext_resource type="Theme" uid="uid://c8lf57q2f23tp" path="res://ui/theme/menu_theme.tres" id="1_14jgw"]
[ext_resource type="Script" uid="uid://b07vnd1mm3oyf" path="res://ui/menus/menu_profiles.gd" id="1_racsg"]
[ext_resource type="PackedScene" uid="uid://c5kj6fcv4g2ux" path="res://ui/settings/setting_string.tscn" id="2_14jgw"]
[ext_resource type="PackedScene" uid="uid://dqm2w5ummvxsm" path="res://ui/option_button.tscn" id="3_qus3q"]
[ext_resource type="PackedScene" uid="uid://jvyexp7mquoa" path="res://ui/button.tscn" id="4_fhu81"]
[ext_resource type="Texture2D" uid="uid://empk3tddpq0c" path="res://assets/icon/icon_plus.png" id="5_4fufk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14jgw"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.12549, 0.156863, 0.188235, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qus3q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qus3q"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.12549, 0.156863, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhu81"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.12549, 0.156863, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fufk"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.12549, 0.156863, 0.188235, 1)

[node name="MenuProfiles" type="PanelContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1098.0
offset_bottom = -919.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_14jgw")
theme_override_styles/panel = SubResource("StyleBoxFlat_14jgw")
script = ExtResource("1_racsg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SettingProfileName" parent="VBoxContainer" instance=ExtResource("2_14jgw")]
unique_name_in_owner = true
layout_mode = 2
setting_name = "profile name"
setting_name_min_width = 160

[node name="OptionProfiles" parent="VBoxContainer" instance=ExtResource("3_qus3q")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_qus3q")

[node name="ButtonProfileCreate" parent="VBoxContainer" instance=ExtResource("4_fhu81")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qus3q")
text = "New Profile"
icon = ExtResource("5_4fufk")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonProfileReset" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("4_fhu81")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fhu81")
text = "Reset"

[node name="ButtonProfileDelete" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("4_fhu81")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4fufk")
text = "Delete"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer3"]
visible = false
custom_minimum_size = Vector2(80, 18)
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[b]Profile[/b]"
scroll_active = false

[node name="OptionProfiles2" type="OptionButton" parent="VBoxContainer/HBoxContainer3"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
